<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NotificationBar Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="single_line">Single Line Notification</string>
    <string name="multi_line">Multi Line Notification</string>
    <string name="start">Start Notification</string>
    <string name="stop">Stop Notification</string>
    <string name="update">Update Notification</string>

</resources>