<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <!-- Single Line Notification Views -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/single_line"
            android:textColor="#0587d9"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/start_notificationone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <Button
            android:id="@+id/stop_notificationone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop" />

        <Button
            android:id="@+id/update_notificationone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />

        <!-- Multi Line Notification Views -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/multi_line"
            android:textColor="#0587d9"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/start_notificationtwo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <Button
            android:id="@+id/stop_notificationtwo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop" />

        <Button
            android:id="@+id/update_notificationtwo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />
    </LinearLayout>

</ScrollView>